testdata/baselines/reference/submodule/conformance/jsdocTemplateTagDefault.errors.txt
file.js(6,12): error TS2304: Cannot find name 'A'.
file.js(8,12): error TS2304: Cannot find name 'A'.
file.js(10,12): error TS2304: Cannot find name 'A'.
file.js(12,12): error TS2304: Cannot find name 'A'.
file.js(46,12): error TS2304: Cannot find name 'T'.
file.js(47,12): error TS2304: Cannot find name 'U'.
file.js(54,12): error TS2304: Cannot find name 'T'.
file.js(55,12): error TS2304: Cannot find name 'U'.
file.js(62,12): error TS2304: Cannot find name 'T'.
file.js(63,12): error TS2304: Cannot find name 'U'.


==== file.js (10 errors) ====
    /**
     * @template {string | number} [T=string] - ok: defaults are permitted
     * @typedef {[T]} A
     */
    
    /** @type {A} */ // ok, default for `T` in `A` is `string`
               ~
!!! error TS2304: Cannot find name 'A'.
    const aDefault1 = [""];
    /** @type {A} */ // error: `number` is not assignable to string`
               ~
!!! error TS2304: Cannot find name 'A'.
    const aDefault2 = [0];
    /** @type {A<string>} */ // ok, `T` is provided for `A`
               ~
!!! error TS2304: Cannot find name 'A'.
    const aString = [""];
    /** @type {A<number>} */ // ok, `T` is provided for `A`
               ~
!!! error TS2304: Cannot find name 'A'.
    const aNumber = [0];
    
    /**
     * @template T
     * @template [U=T] - ok: default can reference earlier type parameter
     * @typedef {[T, U]} B
     */
    
    /**
     * @template {string | number} [T] - error: default requires an `=type`
     * @typedef {[T]} C
     */
    
    /**
     * @template {string | number} [T=] - error: default requires a `type`
     * @typedef {[T]} D
     */
    
    /**
     * @template {string | number} [T=string]
     * @template U - error: Required type parameters cannot follow optional type parameters
     * @typedef {[T, U]} E
     */
    
    /**
     * @template [T=U] - error: Type parameter defaults can only reference previously declared type parameters.
     * @template [U=T]
     * @typedef {[T, U]} G
     */
    
    /**
     * @template T
     * @template [U=T] - ok: default can reference earlier type parameter
     * @param {T} a
               ~
!!! error TS2304: Cannot find name 'T'.
     * @param {U} b
               ~
!!! error TS2304: Cannot find name 'U'.
     */
    function f1(a, b) {}
    
     /**
     * @template {string | number} [T=string]
     * @template U - error: Required type parameters cannot follow optional type parameters
     * @param {T} a
               ~
!!! error TS2304: Cannot find name 'T'.
     * @param {U} b
               ~
!!! error TS2304: Cannot find name 'U'.
     */
    function f2(a, b) {}
    
    /**
     * @template [T=U] - error: Type parameter defaults can only reference previously declared type parameters.
     * @template [U=T]
     * @param {T} a
               ~
!!! error TS2304: Cannot find name 'T'.
     * @param {U} b
               ~
!!! error TS2304: Cannot find name 'U'.
     */
    function f3(a, b) {}
    